@@ -265,6 +265,8 @@ tasks.withType(Test).configureEach {
     list.add("--add-opens")
     list.add("java.base/java.time=ALL-UNNAMED")
     list.add("--add-opens")
+    list.add("java.base/java.util.concurrent=ALL-UNNAMED")
+    list.add("--add-opens")
     list.add("java.base/java.net=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.nio=ALL-UNNAMED")
@@ -276,7 +278,7 @@ tasks.withType(Test).configureEach {
     list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/sun.security.action=jdk.crypto.ec")
-
+    
     list.add("-Xms512m")
     list.add("-Xmx6g")
 
